WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278242
imported/w3c/web-platform-tests/IndexedDB/file_support.sub.html is failing on wpt
https://bugs.webkit.org/show_bug.cgi?id=278242
Summary
imported/w3c/web-platform-tests/IndexedDB/file_support.sub.html is failing on...
Sihui Liu
Reported
2024-08-16 11:28:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-16 11:28:45 PDT
<
rdar://problem/134071413
>
Sihui Liu
Comment 2
2024-08-16 11:30:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32308
EWS
Comment 3
2024-08-16 17:32:59 PDT
Committed
282376@main
(2c8d8c5d7369): <
https://commits.webkit.org/282376@main
> Reviewed commits have been landed. Closing PR #32308 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug