imported/w3c/web-platform-tests/IndexedDB/file_support.sub.html is flakily failing on wpt https://bugs.webkit.org/show_bug.cgi?id=278242 rdar://134071413

Reviewed by Brady Eidson.

The test expects the metadata of File object (including lastModified) retrieved from IndexedDB database is the same as
the original File object that gets stored into database. In existing implementation, we store metadata together with
File data on disk, and when we crete File object from disk data, we populate it with the metadata on disk. The test
fails as lastModified value is not restored correctly, becasue we only store lastModifiedOverride but not actual
lastModified value. This patch fixes this by ensuring lastModified value is written during JSValue serialization.

This patch does not update the test expectation because the test relies on WebDriver's functions and it still fails in
WebKitTestRunner.

* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneSerializer::write):

Canonical link: https://commits.webkit.org/282376@main